; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_obs_add_data_path.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_obs_add_data_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dstr = type { i32 }

@core_module_paths = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_add_data_path(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.dstr*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @core_module_paths, align 4
  %5 = call %struct.dstr* @da_push_back_new(i32 %4)
  store %struct.dstr* %5, %struct.dstr** %3, align 8
  %6 = load %struct.dstr*, %struct.dstr** %3, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @dstr_init_copy(%struct.dstr* %6, i8* %7)
  %9 = load i32, i32* @core_module_paths, align 4
  %10 = load %struct.dstr*, %struct.dstr** %3, align 8
  %11 = call i32 @da_push_back(i32 %9, %struct.dstr* %10)
  ret void
}

declare dso_local %struct.dstr* @da_push_back_new(i32) #1

declare dso_local i32 @dstr_init_copy(%struct.dstr*, i8*) #1

declare dso_local i32 @da_push_back(i32, %struct.dstr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
